--- a/client/src/App.css
+++ b/client/src/App.css
@@ -776,3 +776,84 @@ input.input100 {
     background-position: 0% 50%;
   }
 }
+
+.cardkontejnrgrid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 10%;
+  align-items: center;
+  justify-content: center;
+}
+.contactContainer1 {
+  display: flex;
+  flex-grow: 1;
+  justify-content: center;
+  align-items: center;
+  height: 400px;
+  border: solid grey !important;
+  border-radius: 5%;
+  box-shadow: 2px 2px 2px grey;
+  background-color: white;
+  width: 300px;
+}
+.zunanji {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.slikaodUserja1 {
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/4/4c/Coleporter.jpg") !important;
+  height: 121px;
+  width: 121px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+}
+.nameCOntact9123 {
+  font-size: 20px;
+}
+.surrnameCOntact9,
+.nameCOntact9,
+.addressnameCOntact9,
+.phonenameCOntact9 {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-around;
+}
+.deletebtn {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+.absolutno {
+}
+.containerInsideContact1 {
+  flex-grow: 1;
+  height: 100%;
+}
+.imageOfuser1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.slikaodUserja1 {
+  background-image: url("https://pmcdeadline2.files.wordpress.com/2019/08/billy-porter-dl-271-edit.jpg?crop=0px%2C2px%2C1000px%2C560px&resize=681%2C383") !important;
+  height: 121px;
+  background-position: center;
+  width: 121px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+}
+.nameContainer9 {
+}
+.textContainer1234444 {
+  margin: 20px;
+}
+.nameCOntact9 {
+  display: flex;
+  align-items: stretch;
+}
