--- a/client/src/App.css
+++ b/client/src/App.css
@@ -790,12 +790,14 @@ input.input100 {
   justify-content: center;
   align-items: center;
   height: 400px;
-  border: solid grey !important;
+  border: solid rgb(192, 188, 188) !important;
   border-radius: 5%;
-  box-shadow: 2px 2px 2px grey;
+  box-shadow: 2px 2px 2px rgb(175, 172, 172);
   background-color: white;
   width: 300px;
+  transition: 1s;
 }
+
 .zunanji {
   display: flex;
   align-items: center;
@@ -811,6 +813,10 @@ input.input100 {
 }
 .nameCOntact9123 {
   font-size: 20px;
+  display: flex;
+  color: grey;
+  flex-grow: 1;
+  justify-content: center;
 }
 .surrnameCOntact9,
 .nameCOntact9,
@@ -826,8 +832,7 @@ input.input100 {
   align-items: flex-start;
   justify-content: flex-start;
 }
-.absolutno {
-}
+
 .containerInsideContact1 {
   flex-grow: 1;
   height: 100%;
@@ -846,8 +851,7 @@ input.input100 {
   justify-content: center;
   border-radius: 50%;
 }
-.nameContainer9 {
-}
+
 .textContainer1234444 {
   margin: 20px;
 }
