--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,13 +37,14 @@
 }
 .add-btn {
   height: 4vh;
-  text-shadow: 2px 2px rgb(100, 95, 95);
+  text-shadow: 1px 1px rgb(100, 95, 95);
   width: 14vw;
   border-radius: 14px;
   margin: 20px;
   font-size: 2vh;
-  color: rgb(219, 214, 214);
-  font-family: "Ubuntu", sans-serif;
+  color: black(219, 214, 214);
+  font-weight: 600;
+  font-family: cursive;
 }
 .naslovnice {
   font-size: 3vh !important;
@@ -58,10 +59,11 @@
 }
 .surrnamefilta {
   width: 100%;
-  height: 3vh;
+  height: 4vh;
 
   border-radius: 20px;
-  border: solid rgb(218, 213, 213) !important;
+  border: solid rgb(97, 94, 94) !important;
+  box-shadow: 6px 4px 14px grey;
   text-align: center;
   font-size: 2vh;
   font-weight: 600;
@@ -76,6 +78,12 @@
 .surrnamefilta::placeholder {
   color: rgb(235, 231, 231);
 }
+
+.glavno50 {
+  height: 60vh;
+  background-color: rgb(205, 205, 205);
+}
+
 .surrnameFilter {
   width: 60vw;
   margin: 10px;
@@ -129,15 +137,7 @@ h3 {
   background-image: url("./images/bg-01.jpg");
 }
 .ozadjeUserIntercase {
-  background: linear-gradient(
-    -45deg,
-    #ee7752,
-    #a9aec9,
-    #4bc0ad,
-    #2e0a50
-  ) !important;
-  background-size: 400% 400% !important;
-  animation: gradient 15s ease infinite !important;
+  background-color: rgb(205, 205, 205) !important;
 }
 a {
   font-family: Poppins-Regular;
@@ -398,12 +398,12 @@ iframe {
   padding: 173px 55px 55px 55px;
 }
 .mainBody {
-  background: linear-gradient(-45deg, #ee7752, #a9aec9, #4bc0ad, #2e0a50);
-  background-size: 400% 400%;
-  animation: gradient 15s ease infinite;
-  min-height: 100vh;
+  background-color: rgb(205, 205, 205) !important;
 }
-
+.glavno2 {
+  height: 400px;
+  background-color: rgb(205, 205, 205) !important;
+}
 .login100-form-title {
   width: 100%;
   display: block;
@@ -858,4 +858,8 @@ input.input100 {
 .nameCOntact9 {
   display: flex;
   align-items: stretch;
+}
+
+.glavno3 {
+  height: 50vh;
 }
